--- a/src/renderer/src/assets/index.css
+++ b/src/renderer/src/assets/index.css
@@ -1,3 +1,12 @@
+* {
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: column;
@@ -12,22 +21,22 @@ body {
     'Cantarell',
     'Open Sans',
     sans-serif;
-  color: #86a5b1;
-  background-color: black;
+  color: #181818;
+  background-color: #eee;
+  height: 100%;
+  margin: 0 auto;
 }
 
-* {
-  padding: 0;
-  margin: 0;
+#root {
+  height: 100%;
 }
 
 .container {
   flex: 1;
   display: flex;
   flex-direction: column;
-  max-width: 840px;
-  margin: 0 auto;
-  padding: 15px 30px 0 30px;
+  height: 100%;
+  width: 100%;
 }
 
 @media (max-width: 840px) {
